--- a/BUILD.gn
+++ b/BUILD.gn
@@ -100,6 +100,14 @@ static_library("libdeno") {
   complete_static_lib = true
   sources = [
     "src/from_snapshot.cc",
+    "src/snapshot_deno.s",
+
+  ]
+  data = [
+    "$target_gen_dir/snapshot_deno.bin",
+  ]
+  data_deps = [
+    ":bundle",
   ]
   deps = [
     ":create_snapshot_deno",
@@ -131,8 +139,10 @@ v8_source_set("deno_base_test") {
   sources = [
     "src/file_util_test.cc",
     "src/from_snapshot.cc",
+    "src/snapshot_mock_runtime.s",
     "src/mock_runtime_test.cc",
   ]
+  data = [ "$target_gen_dir/snapshot_mock_runtime.bin" ]
   deps = [
     ":create_snapshot_mock_runtime",
     ":deno_base",
