--- a/build_extra/deno.gni
+++ b/build_extra/deno.gni
@@ -28,7 +28,7 @@ template("create_snapshot") {
                            ])
     tool = ":snapshot_creator"
     visibility = [ ":*" ]  # Only targets in this file can depend on this.
-    snapshot_out_cc = "$target_gen_dir/snapshot_$name.cc"
+    snapshot_out_bin = "$target_gen_dir/snapshot_$name.bin"
     inputs = [
       invoker.js,
     ]
@@ -36,7 +36,7 @@ template("create_snapshot") {
       inputs += [ invoker.source_map ]
     }
     outputs = [
-      snapshot_out_cc,
+      snapshot_out_bin,
     ]
     args = rebase_path(outputs, root_build_dir) +
            rebase_path(inputs, root_build_dir)
