--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
     "@types/base64-js": "^1.2.5",
     "@types/flatbuffers": "^1.9.0",
     "@types/source-map-support": "^0.4.1",
+    "base64-js": "^1.3.0",
     "flatbuffers": "^1.9.0",
     "prettier": "^1.13.7",
     "rollup": "^0.63.2",
-    "rollup-pluginutils": "^2.3.0",
     "rollup-plugin-alias": "^1.4.0",
     "rollup-plugin-analyzer": "^2.1.0",
     "rollup-plugin-commonjs": "^9.1.3",
@@ -14,6 +14,7 @@
     "rollup-plugin-node-resolve": "^3.3.0",
     "rollup-plugin-string": "^2.0.2",
     "rollup-plugin-typescript2": "^0.16.1",
+    "rollup-pluginutils": "^2.3.0",
     "source-map-support": "^0.5.6",
     "tslint": "^5.10.0",
     "tslint-eslint-rules": "^5.3.1",
